--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #d5d6c3;
+  height: 1500px;
 }
 
 .App-logo {
@@ -35,4 +37,96 @@
   to {
     transform: rotate(360deg);
   }
+}
+.nav {
+  max-width: 500px;
+  height: 50px;
+  margin: auto;
+  padding-top: 20px;
+  margin-bottom: 50px;
+  background-color: #b8ba9c;
+  border: 5px solid white;
+  outline-style: solid;
+  outline-color: #b8ba9c;
+}
+
+a {
+  margin: 20px;
+  font-size: 1.5rem;
+  text-decoration: none;
+  color: darkslategrey;
+  font-weight: bold;
+}
+
+.friends-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 50px;
+  padding-left: 50px;
+}
+
+.card {
+  margin: 20px;
+  width: 250px;
+  height: 200px;
+  background-color: rgb(165, 164, 165);
+  border: 50px solid #8f9179;
+  outline-style: solid;
+  outline-color: gainsboro;
+}
+
+h2,
+h3 {
+  color: darkslategray;
+  font-weight: 900;
+}
+
+.login,
+.add {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: auto;
+  padding-top: 40px;
+  background-color: ivory;
+  height: 500px;
+}
+
+.login-button {
+  height: 50px;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  border-radius: 30px;
+  font-size: 1rem;
+  font-weight: 800;
+  color: #7d8242;
+}
+
+.add-friend {
+  height: 50px;
+  width: 50%;
+  margin: auto;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 800;
+  color: #7d8242;
+}
+
+input {
+  height: 50px;
+  max-width: 80%;
+  margin: auto;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 800;
+}
+
+.username,
+.password {
+  margin: 20px;
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: #7d8242;
 }
