--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -89,8 +89,8 @@ a {
   outline-color: rgb(15, 14, 15);
   margin-left: 4em;
   border: 1px solid pink;
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: .1s;
+  transition: .1s;
   transform: rotate(360deg);
 }
 
@@ -122,8 +122,9 @@ h3 {
   border-radius: 30px;
   font-size: 1rem;
   font-weight: 800;
-  color: #7d8242;
+  color: #0f0e0f;
 }
+
 
 .add-friend {
   height: 50px;
@@ -150,5 +151,5 @@ input {
   margin: 20px;
   font-size: 1.5rem;
   font-weight: 800;
-  color: #7d8242;
+  color: #161614;
 }
